Valid moves now show as a small circle in the square where moves are valid.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "cday-with-ai",
   "license": "ISC",
   "dependencies": {
+    "chess.js": "^1.2.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
