--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
-# IntelliJ IDEA
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/usage.statistics.xml
-.idea/dictionaries
-.idea/shelf
-.idea/httpRequests
-.idea/dataSources
-.idea/dataSources.local.xml
-.idea/caches
-.idea/libraries
-.idea/modules.xml
-.idea/uiDesigner.xml
+# IntelliJ IDEA - ignore entire .idea directory
+.idea/
 
 # IntelliJ build output
 out/
