Fix more chess engine issues: castling, en passant, promotion, and check detection
- Fixed castling validation to properly check if squares are under attack
- Fixed en passant detection by passing en passant target to parser
- Fixed pawn promotion move generation and notation parsing
- Fixed check detection and added public isInCheck() method
- Fixed multiple test cases with incorrect FEN positions
- Improved move validation to handle castling moves properly
- Added proper handling of test moves including castling in validator

Tests passing: 93/122 (up from 76/113)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
       "@fics/shared/*": ["packages/shared/src/*"]
     }
   },
-  "references": [
-    { "path": "./packages/shared" },
-    { "path": "./packages/web" },
-    { "path": "./packages/mobile" }
+  "exclude": [
+    "**/node_modules",
+    "**/dist",
+    "**/*.d.ts"
   ]
 }
