--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ out/
 
 package-lock.json
 yarn.lock
-node_modules/*
-coverage/*
+node_modules/
+**/node_modules/
+coverage/
+**/coverage/
 /packages/shared/tsconfig.tsbuildinfo
+/packages/web/dist/
+/packages/mobile/build/
